--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         ></div>
         <div class="about_us">
         <h4 class="title" >
-          A Student Of Krishna Engineering College , Ghaziyabad . Hometown
+          A Student Of Krishna Engineering College , Ghaziabad . Hometown
           Mirzapur Uttar Pradesh.
         </h4 >
         <h5 class="content" >
